<resources>
    <string name="app_name">IntelligentBoiler</string>
    <!--MainActivity-->
    <string name="btnText_login_main">登录</string>
    <string name="btnText_demonstrate_main">演示</string>
    <string name="dialog_text">您上次选择的演示锅炉是：\n</string>
    <string name="dialog_text_yes">直接前往</string>
    <string name="dialog_text_no">选择演示锅炉</string>
    <string name="choiceboiler_text">选择锅炉</string>

    <!--选择锅炉-->
    <string name="locateplace_text">所在地区</string>
    <string name="project_text">相关项目</string>
    <string name="monitor_text">监控锅炉</string>
<!--数据分析-->
    <string name="year_text">年(Year)</string>
    <string name="month_text">月(Month)</string>
    <string name="day_text">日(Day)</string>
    <string name="hour_text">小时(Hour)</string>

    <!--个人中心-->
    <string name="username_text">用户名</string>
    <string name="project_introduction_text">项目介绍</string>
    <string name="boiler_introduction_text">锅炉介绍</string>
    <string name="ec_text">环保中心</string>
    <string name="intellect_text">智能APP</string>
    <string name="technical_consultant_text">技术咨询</string>
    <string name="setting_text">系统设置</string>
    <string name="contact_text">联系我们</string>

    <!--优化建议-->
    <string name="suggestionTitle_text">优化建议</string>
    <string name="sureBtn_text">确定</string>
</resources>
