<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/toolBar"
        layout="@layout/toolbar"
        android:visibility="gone" />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/text_bg"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
        <TextView
            android:id="@+id/userName_Tv"
            android:layout_width="match_parent"
            android:text="@string/username_text"
            android:gravity="center_vertical"
            android:layout_height="50dp"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="10dp"
            android:padding="10dp"
            />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/text_bg"/>
            <TextView
                android:id="@+id/projectIntroduction_Tv"
                android:layout_width="match_parent"
                android:text="@string/project_introduction_text"
                android:gravity="center_vertical"
                android:layout_height="50dp"
                android:drawableLeft="@drawable/project_introduction"
                android:drawablePadding="10dp"
                android:padding="10dp"
                /><TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/text_bg"/>
            <TextView
                android:id="@+id/boilerIntroduction_Tv"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:text="@string/boiler_introduction_text"
                android:drawableLeft="@drawable/boiler_introduction"
                android:drawablePadding="10dp"
                android:padding="10dp"/><TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/text_bg"/>
            <TextView
                android:id="@+id/ec_Tv"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:text="@string/ec_text"
                android:drawableLeft="@drawable/ec"
                android:drawablePadding="10dp"
                android:padding="10dp"/><TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/text_bg"/>
            <TextView
                android:id="@+id/intellect_Tv"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:text="@string/intellect_text"
                android:drawableLeft="@drawable/intellect"
                android:drawablePadding="10dp"
                android:padding="10dp"/><TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/text_bg"/>
            <TextView
                android:id="@+id/technicalConsultant_Tv"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:text="@string/technical_consultant_text"
                android:drawableLeft="@drawable/technical_consultant"
                android:drawablePadding="10dp"
                android:padding="10dp"/><TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/text_bg"/>
            <TextView
                android:id="@+id/setting_Tv"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:text="@string/setting_text"
                android:drawableLeft="@drawable/setting"
                android:drawablePadding="10dp"
                android:padding="10dp"/><TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/text_bg"/>
            <TextView
                android:id="@+id/contact_Tv"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:text="@string/contact_text"
                android:drawableLeft="@drawable/contact"
                android:drawablePadding="10dp"
                android:padding="10dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>