<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/toolBar"
        layout="@layout/toolbar"
        android:visibility="gone" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/locateplace_text"
        android:textSize="@dimen/t2"
        android:layout_margin="@dimen/x10"/>
    <LinearLayout
        android:id="@+id/area_ll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x50"
        android:layout_margin="@dimen/x10"
        android:orientation="horizontal">

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/x2"
        android:background="#ccc"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/project_text"
        android:textSize="@dimen/t2"
        android:layout_margin="@dimen/x10"/>
    <LinearLayout
        android:id="@+id/project_ll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x50"
        android:layout_margin="@dimen/x10"
        android:orientation="horizontal">

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/x2"
        android:background="#ccc"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/monitor_text"
        android:textSize="@dimen/t2"
        android:layout_margin="10dp"/>
    <LinearLayout
        android:id="@+id/monitorboiler_ll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x50"
        android:layout_margin="@dimen/x10"
        android:orientation="horizontal">
    </LinearLayout>
</LinearLayout>